Extend PUT requests with parameter 'from'
